Fix padding on iPhoneX

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -7,7 +7,7 @@ main {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 
   #iPadBorder {
     background: black;
@@ -25,8 +25,8 @@ main {
     flex-shrink: 0;
     flex-grow: 0;
     /* iOS 11 && iOS 11.2+ */
-    padding-top: constant(safe-area-inset-top);
-    padding-top: env(safe-area-inset-top);
+    margin-top: constant(safe-area-inset-top);
+    margin-top: env(safe-area-inset-top);
     padding-right: constant(safe-area-inset-right);
     padding-right: env(safe-area-inset-right);
 
@@ -44,7 +44,6 @@ main {
       border: none;
       z-index: 9999;
       justify-content: flex-end;
-      padding: 10px 0;
 
       .left {
         display: none !important;
@@ -120,8 +119,6 @@ main {
         footer {
           border-top: 1px solid var(--divider-color);
           background-color: var(--paper-color);
-          padding-bottom: constant(safe-area-inset-bottom) !important;
-          padding-bottom: env(safe-area-inset-bottom) !important;
         }
       }
 
